<resources>
    <string name="31u">Navigate up</string>
    <string name="273">Done</string>
    <string name="4m7">OFF</string>
    <string name="16f">ON</string>
    <string name="221">Alt+</string>
    <string name="2p4">Ctrl+</string>
    <string name="2et">delete</string>
    <string name="3tm">enter</string>
    <string name="24i">Function+</string>
    <string name="147">Meta+</string>
    <string name="74d">Shift+</string>
    <string name="7b1">space</string>
    <string name="l">Sym+</string>
    <string name="3qd">Menu+</string>
    <string name="3ub">Search…</string>
    <string name="31f">Clear query</string>
    <string name="47t">Search</string>
    <string name="32i">Submit query</string>
    <string name="28f">Voice search</string>
    <string name="55e">Collapse</string>
    <string name="4f2">Account</string>
    <string name="64i">Activate</string>
    <string name="4m0">For the app to operate correctly, please allow TiviMate to set alarms and reminders</string>
    <string name="4mb">For the app to operate correctly, please allow TiviMate to access all files</string>
    <string name="3jg">androidx.startup</string>
    <string name="2g0">TiviMate</string>
    <string name="70p">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="4g3">Apply</string>
    <string name="2io">Apply changes</string>
    <string name="3v5">Apply changes?</string>
    <string name="auto">Auto</string>
    <string name="1uq">Back</string>
    <string name="6jt">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="4hd">Collapse</string>
    <string name="6rv">Collapse the bottom sheet</string>
    <string name="58j">Expand</string>
    <string name="59s">Expand the bottom sheet</string>
    <string name="7c3">Expand halfway</string>
    <string name="557">Half expand the bottom sheet</string>
    <string name="6lh">Drag handle</string>
    <string name="3lk">Collapsed</string>
    <string name="3qv">Expanded</string>
    <string name="2vd">Half expanded</string>
    <string name="4iq">Answer</string>
    <string name="5bg">Video</string>
    <string name="219">Decline</string>
    <string name="b7">Hang Up</string>
    <string name="5kn">Incoming call</string>
    <string name="512">Ongoing call</string>
    <string name="2dq">Screening an incoming call</string>
    <string name="4se">Cancel</string>
    <string name="2bm">Characters entered %1$d of %2$d</string>
    <string name="2qq">Character limit exceeded %1$d of %2$d</string>
    <string name="1ud">%1$d/%2$d</string>
    <string name="61j">Clear</string>
    <string name="4ba">Clear text</string>
    <string name="4u8">Close</string>
    <string name="5os">e45e1a1b6b0e40b7ade8a9e1692d4fb5</string>
    <string name="5oh">repositories {\n  system: GIT\n  local_root_path: \"$PROJECT_DIR\"\n  revision: \"d00b07fdf815685963e6cfec3d908df8b4bde29d\"\n}\n</string>
    <string name="7a1">Re-enter password</string>
    <string name="4rc">Create account</string>
    <string name="55j">Email</string>
    <string name="3cb">Email is already taken, please reset your password instead</string>
    <string name="22l">Log in with Facebook</string>
    <string name="4gk">Facebook login failed</string>
    <string name="5s5">Forgot password</string>
    <string name="4ia">Email is invalid, please correct it and try again</string>
    <string name="1s9">User logged in, starting: </string>
    <string name="1c9">User not logged in, starting ParseLoginActivity</string>
    <string name="4bg">Email</string>
    <string name="6op">Please check your email for instructions on how to access your account</string>
    <string name="5fg">Enter your email to recover your password</string>
    <string name="276">Back to Login</string>
    <string name="156">Submit</string>
    <string name="3p5">Failed to request password reset, please try again</string>
    <string name="420">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="1q1">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="6f4">Disabled username/password login and signup because of missing layout elements</string>
    <string name="6d0">Facebook login failed, exception: </string>
    <string name="453">Updating user object after Facebook login failed, exception: </string>
    <string name="5gr">Layout missing login button</string>
    <string name="1t3">Layout missing login help button</string>
    <string name="63h">Layout missing password field</string>
    <string name="4n0">Layout missing signup button</string>
    <string name="2d5">Layout missing username field</string>
    <string name="4u4">Parse username/password login failed, exception: </string>
    <string name="12n">Parse signup failed, exception: </string>
    <string name="4rv">Parse password reset failed, exception: </string>
    <string name="3om">Twitter login failed, exception: </string>
    <string name="372">Updating user object after Twitter login failed, exception: </string>
    <string name="68d">Logo</string>
    <string name="781">Passwords don\'t match, please try again</string>
    <string name="nr">Name</string>
    <string name="4pp">Please enter your email</string>
    <string name="314">Please enter your name</string>
    <string name="499">Please enter your password</string>
    <string name="13i">Please enter your username</string>
    <string name="2pc">Log in</string>
    <string name="659">Could not log in, please try again later</string>
    <string name="45v">The username and password you entered don\'t match</string>
    <string name="6hd">Sign up</string>
    <string name="5ec">Password</string>
    <string name="1pd">Please wait…</string>
    <string name="3dk">Please re-enter your password</string>
    <string name="3ad">Could not sign up, please try again later</string>
    <string name="pr">Log in with Twitter</string>
    <string name="6ed">Twitter login failed</string>
    <string name="2p7">Update the app</string>
    <string name="5d2">Username</string>
    <string name="2s4">Username is already taken, please choose a different one</string>
    <string name="45m">Enable</string>
    <string name="4m6">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="1us">Enable Google Play services</string>
    <string name="68s">Install</string>
    <string name="28j">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="1bv">Get Google Play services</string>
    <string name="38i">Google Play services availability</string>
    <string name="kb">Google Play services error</string>
    <string name="4jd">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="4go">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="12q">Update</string>
    <string name="42d">%1$s won\'t run unless you update Google Play services.</string>
    <string name="5pm">Update Google Play services</string>
    <string name="59b">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="24">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="6qr">Open on phone</string>
    <string name="40l">Sign in</string>
    <string name="120">Sign in with Google</string>
    <string name="5h9">Copy</string>
    <string name="6i7">default</string>
    <string name="747">Default</string>
    <string name="23q">33400529460-qh0k5blmhc1931j2ebu4k1ll6o5a4ebo.apps.googleusercontent.com</string>
    <string name="6bb">Delete</string>
    <string name="7c1">Device ID</string>
    <string name="4r9">Dismiss</string>
    <string name="52j">Done</string>
    <string name="4s9">Don\'t show again</string>
    <string name="42f">Error: invalid</string>
    <string name="on_res_0x7f130091">Error</string>
    <string name="3mq">Enable subtitles</string>
    <string name="304">Disable subtitles</string>
    <string name="6ho">Enter fullscreen</string>
    <string name="1cc">Exit fullscreen</string>
    <string name="5c5">Hide player controls</string>
    <string name="ic">Next</string>
    <string name="772">Hide additional settings</string>
    <string name="2b7">Show additional settings</string>
    <string name="2ef">Pause</string>
    <string name="69s">Play</string>
    <string name="6v3">Speed</string>
    <string name="4pl">Previous</string>
    <string name="3i2">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="70u">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="7bn">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="290">Settings</string>
    <string name="1v0">Show player controls</string>
    <string name="6bt">Enable shuffle mode</string>
    <string name="4e5">Disable shuffle mode</string>
    <string name="5qe">00:00:00</string>
    <string name="2kn">VR mode</string>
    <string name="27g">%1$s, %2$s</string>
    <string name="741">%1$.2f Mbps</string>
    <string name="75s">Mono</string>
    <string name="1ts">%1$d × %2$d</string>
    <string name="3lm">Alternate</string>
    <string name="4vk">CC</string>
    <string name="6mp">Commentary</string>
    <string name="1jj">Supplementary</string>
    <string name="51b">Auto</string>
    <string name="48o">None</string>
    <string name="405">Audio</string>
    <string name="k9">Stereo</string>
    <string name="4od">Surround sound</string>
    <string name="4im">5.1 surround sound</string>
    <string name="1ru">7.1 surround sound</string>
    <string name="66e">Unknown</string>
    <string name="6vf">Unknown (%1$s)</string>
    <string name="2sc">Advanced</string>
    <string name="77e">Show dropdown menu</string>
    <string name="4q8">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="2pf">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="25e">Favorites</string>
    <string name="57l">Delete storage?</string>
    <string name="1c2">No files</string>
    <string name="3qo">No folders</string>
    <string name="74f">You can restore a backup file by opening it in a file manager</string>
    <string name="79e">Setup SMB</string>
    <string name="53h">SMB</string>
    <string name="4hv">Storage</string>
    <string name="6g7">System picker</string>
    <string name="63u">System picker not found</string>
    <string name="17h">The file system access can be restricted. Try to use the system picker.</string>
    <string name="70l">https://tivimate-233306.firebaseio.com</string>
    <string name="2uo">33400529460</string>
    <string name="3cd">AIzaSyBWOjQJcKGmr-r7N1V6dMWmzIqj5_iXoqE</string>
    <string name="54c">1:33400529460:android:6c095a9bb6e56f3f</string>
    <string name="6c7">AIzaSyBWOjQJcKGmr-r7N1V6dMWmzIqj5_iXoqE</string>
    <string name="415">Google Play error: %s</string>
    <string name="44f">tivimate-233306.appspot.com</string>
    <string name="54d">Dialog Icon</string>
    <string name="21f">Instructions</string>
    <string name="5ql">Invert selection</string>
    <string name="3uo">Tab</string>
    <string name="4bn">%1$dX</string>
    <string name="269">%1$dX</string>
    <string name="1if">Continue</string>
    <string name="mq">Finish</string>
    <string name="75v">MediaPlayer error code %1$d extra %2$d</string>
    <string name="74v">Navigation menu</string>
    <string name="bg">Next</string>
    <string name="jb">GET STARTED</string>
    <string name="6j4">Disable Closed Captioning</string>
    <string name="2o2">Enable Closed Captioning</string>
    <string name="6ml">Fast Forward</string>
    <string name="63t">Fast Forward %1$dX</string>
    <string name="6sd">Select AM or PM</string>
    <string name="220">AM</string>
    <string name="180">PM</string>
</resources>