<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/63s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/5d2"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/23j"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/64c"
        android:hint="@string/5ec"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"/>
    <EditText
        android:id="@+id/35i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/64c"
        android:hint="@string/7a1"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"/>
    <EditText
        android:id="@+id/3m6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/64c"
        android:hint="@string/55j"
        android:singleLine="true"
        android:inputType="text"/>
    <EditText
        android:id="@+id/26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/64c"
        android:hint="@string/nr"
        android:singleLine="true"
        android:inputType="textPersonName"/>
    <Button
        android:id="@+id/5lq"
        android:layout_marginTop="@dimen/64c"
        android:text="@string/4rc"
        style="@style/1i3"/>
</LinearLayout>
