<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/5au"
    android:visibility="gone"
    android:layout_width="@dimen/mv"
    android:layout_height="@dimen/5j6"
    android:contentDescription="@string/6sd"
    app:checkedButton="@+id/4hk"
    app:selectionRequired="true"
    app:singleSelection="true">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/4hk"
        android:layout_width="wrap_content"
        android:text="@string/220"
        android:insetTop="8dp"
        style="?attr/3o1"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/6f8"
        android:layout_width="wrap_content"
        android:text="@string/180"
        android:insetBottom="8dp"
        style="?attr/3o1"/>
</com.google.android.material.button.MaterialButtonToggleGroup>
