<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/2be"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center_vertical"
        android:id="@+id/5g5"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:drawablePadding="0dp"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/ok"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/47t"
        style="?attr/5hc"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/1vl"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:layoutDirection="locale">
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/b6"
            android:visibility="gone"
            android:layout_width="@dimen/3p2"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            style="@style/7a7"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/20q"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <view
                android:ellipsize="end"
                android:layout_gravity="center_vertical"
                android:id="@+id/7n"
                android:background="@null"
                android:paddingLeft="@dimen/u4"
                android:paddingRight="@dimen/6db"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"
                android:dropDownAnchor="@+id/1vl"
                android:imeOptions="actionSearch"
                android:dropDownHeight="wrap_content"
                android:dropDownHorizontalOffset="0dp"
                android:dropDownVerticalOffset="0dp"
                class="androidx.appcompat.widget.SearchView$SearchAutoComplete"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/3ej"
                android:background="?attr/13j"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/31f"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/6rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/189"
                android:background="?attr/13j"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:focusable="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/32i"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/6ca"
                android:background="?attr/13j"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:focusable="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/28f"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
